#3 Make this independent of Laravel.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sanmark/php-helpers",
-    "description": "",
+    "description": "A collection of small helper methods.",
     "authors": [
         {
             "name": "Sanmark",
